[0, 15, 88]: 2019-02-12
  - fix inclusing of python code from the subpackage data (containing extra tests,
    reported by `Florian Apolloner <https://bitbucket.org/apollo13/>`__)

[0, 15, 88]: 2019-02-12
  - fix inclusing of python code from the subpackage data (containing extra tests,
    reported by `Florian Apolloner <https://bitbucket.org/apollo13/>`__)

[0, 15, 87]: 2019-01-22
  - fix problem with empty lists and the code to reinsert merge keys (reported via email 
     by Zaloo)

[0, 15, 87]: 2019-01-22
  - fix problem with empty lists and the code to reinsert merge keys (reported via email 
    by Zaloo)

[0, 15, 86]: 2019-01-16
  - reinsert merge key in its old position (reported by grumbler on
    <Stackoverflow <https://stackoverflow.com/a/54206512/1307905>`__)
  - fix for issue with non-ASCII anchor names (reported and fix
    provided by Dandaleon Flux via email)
  - fix for issue when parsing flow mapping value starting with colon (in pure Python only)
    (reported by `FichteFoll <https://bitbucket.org/FichteFoll/>`__)

[0, 15, 86]: 2019-01-15
  - reinsert merge key in its old position (reported by grumbler on
    <Stackoverflow <https://stackoverflow.com/a/54206512/1307905>`__)
  - fix for issue with non-ASCII anchor names (reported and fix
    provided by Dandaleon Flux via email)
  - fix for issue when parsing flow mapping value starting with colon (in pure Python only)
    (reported by `FichteFoll <https://bitbucket.org/FichteFoll/>`__)

[0, 15, 85]: 2019-01-08
  - the types used by `SafeConstructor` for mappings and sequences can
    now by set by assigning to `XXXConstructor.yaml_base_dict_type`
    (and `..._list_type`), preventing the need to copy two methods
    with 50+ lines that had `var = {}` hardcoded.  (Implemented to
    help solve an feature request by `Anthony Sottile
    <https://bitbucket.org/asottile/>`__ in an easier way)

[0, 15, 84]: 2019-01-07