@@ -1,3 +1,9 @@
+[0, 15, 89]: 2019-02-27
+  - fix for items with flow-mapping in block sequence output on single line
+    (reported by `Zahari Dim <https://bitbucket.org/zahari_dim/>`__)
+  - fix for safe dumping erroring in creation of representereror when dumping namedtuple
+    (reported and solution by `Jaakko Kantojärvi <https://bitbucket.org/raphendyr/>`__)
+
 [0, 15, 88]: 2019-02-12
   - fix inclusing of python code from the subpackage data (containing extra tests,
     reported by `Florian Apolloner <https://bitbucket.org/apollo13/>`__)
